# com-iseg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/com_iseg/: conversions.py
src/com_iseg/data/: dataset.py
src/com_iseg/lightning/: module.py
src/com_iseg/models/: activation.py  layers.py  support.py  unet.py
tests/: test_conversions.py
tests/data/: test_dataset.py
tests/lightning/: test_module.py
