[project]
name = "com-iseg"
version = "0.1.0"
description = "Instance Segmentation based on center of mass"
authors = ["Niklas Breitenbach-Netter <niknett@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.6",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11.1"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]
[project.urls]
Homepage = "https://github.com/gatoniel/com-iseg"
Repository = "https://github.com/gatoniel/com-iseg"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
com-iseg = { workspace = true }
