[project]
name = "com-iseg"
version = "0.1.0"
description = "Instance Segmentation based on center of mass"
authors = [
    { name = "Niklas Breitenbach-Netter", email = "niknett@gmail.com>" }
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.6",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]
[project.urls]
Homepage = "https://github.com/gatoniel/com-iseg"
Repository = "https://github.com/gatoniel/com-iseg"

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "scipy-stubs>=1.16.0.2",
    "tqdm-stubs>=0.2.1",
]

[tool.coverage.run]
parallel = true

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
